instead of having separate rows, i added them all the pictures into one row and then added padding in css to get the correct spacing

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -33,10 +33,9 @@ h1 {
 .picture {
     width: 350px;
     height: 350px;
-}
-
-.col-med-6 {
-    padding 10%;
+    display: block;
+    margin: auto;
+    padding: 20px;
 }
 
 .float-left {
@@ -45,4 +44,7 @@ h1 {
     margin: 20px;
 }
 
+.col-lg-6 {
+    padding: 20;
+}
 
